<resources>
    <string name="app_name">Dory</string>
    <string name="app_id" translatable="false">1469989006683</string>
    <string name="app_key" translatable="false">AIzaSyDKR1mCbzPFTtzHRDIFS0gvt127XJUG9XM</string>

    <string name="facebook_app_id">994635050654109</string>
    <string name="fb_login_protocol_scheme">994635050654109</string>
    <string name="facebook_application_id" translatable="false">994635050654109</string>

    <string name="firebase_url">https://dory-1469989006683.firebaseio.com</string>

    <string name="lorem_ipsum">lorem ipsum</string>

    <integer name="create_user_request_code">1234</integer>
    <integer name="login_request_code">1580</integer>
    <string name="user_profile_picture">User profile picture</string>
    <string name="ok">OK</string>
    <string name="placeholder">Placeholder</string>
    <string name="qr_code_description">Code representing a user. It can be scanned to send friend requests.</string>
    <string name="nick_name">Nick name</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="current_city">Current City</string>
    <string name="profile_picture">Profile picture</string>
    <string name="connect">Connect</string>
    <string name="connect_to_facebook">Connect to Facebook:</string>
    <string name="connect_to_instagram">Connect to Instagram:</string>
</resources>
